--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -16,6 +16,7 @@
     <tr>
       <td><%= teacher.name %></td>
       <td><%= teacher.email %></td>
+      <td><%= link_to 'Delete', teacher, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-warning' %></td>
     </tr>
     <% end %>
   </tbody>
